# Lego

./: README.md
.github/workflows/: docker.yml  test_a.yml
Algorithms/: extracting_lego_piece.py  omni_blender.ps1
Algorithms/ModelAlignment/: 10369b1.usd  README.md  script01a1.py  script02a1.py  script03a1.py  successful_algorithm.py
Algorithms/Overlapping/: README.md  script05a1.py  successful_algorithm.py  vtk_test1.py  vtk_test2.py
Algorithms/Overlapping/FROM_INSITU_ANALYSIS/: clusterDynamic01_1.py  clusterExtractPaths01_1.py  testSignedDistances6.py  vtk_tools.py
Models/10369/Models/VersionA/: plum_blossom_10369a.io
Models/10369/Models/VersionB/: Plum_blossom_10369b.usdz  plum_blossom_10369b.io
Models/31213/: mona_lisa_art_a1.io  mona_lisa_art_b1.7z  mona_lisa_art_b1.io
Models/31213/Blender/: GeoNodesLegoAssembly.blend  untitled01a1.blend
Models/31213/Models/: mona_lisa_art_c1.io
Models/42165/: Sin título.m4v  lego_generator.blend  mercedes-amg-f1_a1.io  mercedes-amg-f1_a2.io  mercedes-amg-f1_a3.io
Models/42165/Videos/: animation06_edition1a.blend  animation06_edition1a.blend1  untitled4b.avi
Models/Scripts/: material_lego_shader.py  meshes_merge.py  modificator_create.py  script01a1.py
Models/porsche-911-rsr-42096/: porsche_911_rsr_42096.io
pcl/: CMakeLists.txt  Dockerfile  interactive_icp.cpp  test_a.cpp  untitled2.ply
pcl/TestA/: CMakeLists.txt  untitled1.ply
